# spicy

./: Cargo.toml  README.md
src/: lib.rs  main.rs  window_layout.rs
