[package]
name = "spicy"
version = "0.1.0"
edition = "2021"
authors = ["Soc Virnyl S. Estela <socvirnyl.estela@gmail.com>"]

[dependencies]
iced = { version = "0.3", features = ["image", "debug"] }
clap = "3.1.6"
env_logger = "0.9.0"
image = { version = "0.24.1", default-features = true }
imageproc = { git = "https://github.com/image-rs/imageproc.git", features = ["rayon"], default-features = true }
log = "0.4.0"
memmap2 = "0.5.3"
nix = "0.20"
tempfile = "3.3.0"

